--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.352.0",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
+    "perfect-freehand": "^1.2.2",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-contenteditable": "^3.3.7",
